--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node survey.js"
   },
   "author": "",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
     "inquirer": "^9.1.4"
   }
